--- a/index.html
+++ b/index.html
@@ -1,57 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Animation</title>
+    <title>DevJane Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+      integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div class="container">
-      <div class="navbar">
-        <div class="menu">
-          <h3 class="logo">Brand <span>Name</span></h3>
-          <div class="hamburger-menu">
-            <div class="bar"></div>
-          </div>
-        </div>
+    <header>
+      <div class="logo">
+        <img src="" alt="" />
       </div>
-      <div class="main-container">
-        <div class="main">
-          <header></header>
-          <div class="overlay">
-            <div class="inner">
-              <h2 class="title">Future is here</h2>
-              <p>
-                The future belongs to those who belive in the beauty of their
-                dreams
-              </p>
-              <button class="btn">Read more</button>
-            </div>
-          </div>
-        </div>
-        <div class="shadow one"></div>
-        <div class="shadow two"></div>
-
-      </div>
-      <div class="links">
-        <ul>
-          <li>
-            <a href="#" style="--i: 0.05s">Home</a>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+          <li class="nav__item">
+            <a href="#services" class="nav__link">My Services</a>
           </li>
-          <li>
-            <a href="#" style="--i: 0.1s">About</a>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About me</a>
           </li>
-          <li>
-            <a href="#" style="--i: 0.15s">Work</a>
-          </li>
-          <li>
-            <a href="#" style="--i: 0.2s">Contact</a>
+          <li class="nav__item">
+            <a href="#work" class="nav__link">My Work</a>
           </li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </header>
 
-    <script src="app.js"></script>
+    <!-- Introduction -->
+    <section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Aleksanteri Jaakola</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+      <img src="me3.png" alt="" class="intro__img"/>
+    </section>
+
+    <!-- My services -->
+    <section class="my-services" id="services">
+      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Design + Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+        <!-- / service -->
+
+        <div class="service">
+          <h3>E-Commerce</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+        <!-- / service -->
+
+        <div class="service">
+          <h3>WordPress</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+        <!-- / service -->
+      </div>
+      <!-- / services -->
+
+      <a href="#work" class="btn">My Work</a>
+    </section>
+
+    <!-- About me -->
+    <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I am</h2>
+      <p class="section__subtitle section__subtitle--about"></p>
+
+      <div class="about-me__body">
+        <p></p>
+        <p></p>
+      </div>
+
+      <img src="" alt="" />
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work" id="work">
+      <h2 class="section__title">My work</h2>
+      <p class="section__subtitle"></p>
+
+      <div class="portfolio">
+        <!-- Portfolio item 01 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 02 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 03 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 04 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 05 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 06 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 07 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 08 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 09 -->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+
+        <!-- Portfolio item 0 0-->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" class="" />
+        </a>
+      </div>
+    </section>
   </body>
 </html>
