Hamburger toggle functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body>
+    <div class="wrapper"></div>
     <header>
       <div class="logo">
         <img src="" alt="" />
@@ -94,11 +95,17 @@
     <!-- About me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about"></p>
+      <p class="section__subtitle section__subtitle--about">Student based in Turku</p>
 
       <div class="about-me__body">
-        <p></p>
-        <p></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.</p>
       </div>
 
       <img src="" alt="" />
@@ -161,5 +168,6 @@
         </a>
       </div>
     </section>
+    <script src="./js/index.js"></script>
   </body>
 </html>
